syntax = "proto3";

package server.account_balance_history;

import "shared/error_type.proto";

message UpsertAccountBalanceHistoriesRequest {
  message UpsertingItem {
    int32 id = 1; // required if updating

    int32 account_id = 2;

    float amount = 3;

    string date = 4;
  }
  repeated UpsertingItem items = 1; // required
}

message UpsertAccountBalanceHistoriesResponse {
  message Result {
    int32 id = 1;

    // If unset, successful.
    shared.ErrorType error_type = 2;
  }
  repeated Result results = 1;
}

